--- a/Task.css
+++ b/Task.css
@@ -1,36 +1,93 @@
   h1 {
-    margin-top: 200px;
-    text-align: left;
+    margin-top:1vh;
+    text-align: center;
     color: red;
     }
     
+  .logo{
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 40vh;
+    padding: 10vh;
+    display: flex;
+    text-align: auto;
+    } 
+
   input {
     border-radius: 30px;
-    border: 2px solid black ;
-    padding: 20px; 
-    width: 400px;
-    height: 15px;
+    border: 2px solid rgb(23, 221, 221) ;
+    padding: 2%; 
+    width: 100%;
+    height: 10%;
     }
 
   .Workspace{
-    margin-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
     text-align: left;
     }
 
-  .Buttons{
-    margin-top: 40px;
-    text-align: left;
+    .button {
+      background-color: #4CAF50; 
+      border: none;
+      color: white;
+      padding: 16px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      transition-duration: 0.4s;
+      cursor: pointer;
+    }
+    
+    .button1 {
+      background-color: white; 
+      color: black; 
+      border: 2px solid #4CAF50;
+    }
+    
+    .button1:hover {
+      background-color: #4CAF50;
+      color: white;
+    }
+    
+    .button2 {
+      background-color: white; 
+      color: black; 
+      border: 2px solid #008CBA;
+    }
+    
+    .button2:hover {
+      background-color: #008CBA;
+      color: white;
+    }
+    
+    .button3 {
+      background-color: white; 
+      color: black; 
+      border: 2px solid #f44336;
+    }
+    
+    .button3:hover {
+      background-color: #f44336;
+      color: white;
+    }
+    .button4 {
+      background-color: white;
+      color: black;
+      border: 2px solid #555555;
+    }
+    
+    .button4:hover {
+      background-color: #555555;
+      color: white;
     }
 
-  .logo{
-    image-resolution: auto;
-    width:20px ;
-    height:5px ;
-    }
-
-  @media screen and (min-width: 1080px){
+  
+    @media screen and (min-width: 400px){
     h1 {
-      margin-top:100px;
+      margin-top:1vh;
       text-align: center;
       color: red;
       }
@@ -39,7 +96,68 @@
       margin-top: 40px;
       text-align: center;
       }   
-    .Buttons{
+    
+      .button {
+        background-color: #4CAF50; 
+        border: none;
+        color: white;
+        padding: 16px 32px;
         text-align: center;
-        }
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+      }
+      
+      .button1 {
+        background-color: white; 
+        color: black; 
+        border: 2px solid #4CAF50;
+      }
+      
+      .button1:hover {
+        background-color: #4CAF50;
+        color: white;
+      }
+      
+      .button2 {
+        background-color: white; 
+        color: black; 
+        border: 2px solid #008CBA;
+      }
+      
+      .button2:hover {
+        background-color: #008CBA;
+        color: white;
+      }
+      
+      .button3 {
+        background-color: white; 
+        color: black; 
+        border: 2px solid #f44336;
+      }
+      
+      .button3:hover {
+        background-color: #f44336;
+        color: white;
+      }
+      .button4 {
+        background-color: white;
+        color: black;
+        border: 2px solid #555555;
+      }
+      
+      .button4:hover {
+        background-color: #555555;
+        color: white;      
+      }
+    .logo{
+      width: 100%;
+      height: 20vh;
+      padding: 10vh;
+      display: flex;
+      text-align: auto;
+      }   
     }
